--- a/Tmaster/Tmaster/pages/updateDish/updateDish.wxml
+++ b/Tmaster/Tmaster/pages/updateDish/updateDish.wxml
@@ -22,15 +22,16 @@
                 <view class="section">
                     <view class="section-title">菜品图片</view>
                     <!-- <view class='dish-img-box' bindtap='upImg' wx:if="{{!show_pic}}"></view> -->
-                    <image class='dish-img' src='{{curr_dish.image}}' bindtap='upImg'></image>
+                    <image class='dish-img' src='{{img_url}}' bindtap='upImg'></image>
                     <view class='up-img-msg m {{is_finish===0?"txt-g":is_finish===1?"green":"red"}}' wx:if="{{show_pic}}">{{is_finish===0?"上传中...":is_finish===1?"上传成功！":"上传失败！"}}</view>
                 </view>
                 <view class="section spec-box" wx:for="{{curr_dish.attrs}}">
                     <view class="section-title">规 格 {{index+1}}</view>
-                    <input class='input-txt spec-input' name="titles_{{index+1}}" type='number' value='{{item.titles}}' placeholder='请输入规格名称'></input>
+                    <input class='input-txt spec-input' name="titles_{{index+1}}" value='{{item.titles}}' placeholder='请输入规格名称'></input>            
+                    <view class='del-btn w m' data-i='{{index}}' bindtap='delSpec'>删除</view>
                     <input class='input-txt spec-num-input' type='number' name="prices_{{index+1}}" value='{{item.prices}}' placeholder='请输入规格价格'></input>
                 </view>
-                <view class='spec-btn m' bindtap='showSpec'>{{spec_num>=1?'继续添加':'点击添加规格'}}</view>
+                <view class='spec-btn m' bindtap='showSpec'>{{curr_dish.attrs.length>=1?'继续添加':'点击添加规格'}}</view>
                 <view class='line'></view>
                 <view class="btn-area">
                     <button formType="submit">保存</button>
