--- a/Teacher5/pages/fifth/fifth.wxml
+++ b/Teacher5/pages/fifth/fifth.wxml
@@ -1,6 +1,3 @@
 <view class="page-container">
-    <image class='img1' src='../../img/t1.jpg'></image>
-    <image class='img2' src='../../img/t2.jpg'></image>
-    <image class='img3' src='../../img/t3.jpg'></image>
-    <image class='img4' src='../../img/t4.jpg'></image>
+    <image class='img{{index+1}}' src='{{item}}' wx:for="{{list}}"></image>
 </view>
