--- a/Teacher5/pages/sixth/sixth.wxml
+++ b/Teacher5/pages/sixth/sixth.wxml
@@ -1,5 +1,3 @@
 <view class="page-container">
-    <image class='img1' src='../../img/l1.jpg'></image>
-    <image class='img2' src='../../img/l2.jpg'></image>
-    <image class='img3' src='../../img/l3.jpg'></image>
+    <image class='img{{index+1}}' src='{{item}}' wx:for="{{list}}"></image>
 </view>
